CSS overlap fixed, search page functional minimumRating still not filtered on
To do
search page
ensure both desktop and mobile friendly with potential mediaqueries
general ui stuff and responsiveness
write unit tests
write readme

--- a/src/pages/DetailPage/DetailPage.css
+++ b/src/pages/DetailPage/DetailPage.css
@@ -1,3 +1,11 @@
+.detailPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
+
 .categoryWrapper{
     display: flex;
     justify-content: center;
